# wmappl

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in  configure.org
icons/: cashterm.xpm  cd.xpm  ghost.xpm  gimp.xpm  glowx.xpm  gnustep.xpm  info.xpm  keyboard.xpm  mozilla.xpm  palette.xpm  recyclebin.xpm  ssh.xpm  template.xpm  text.xpm  tux.xpm  twoplus2.xpm  wmappl.xpm  xmms.xpm  xterm.xpm  yingyang.xpm
icons/CVS/: Entries  Repository  Root  Tag
man/: Makefile.am  Makefile.in  wmappl.1  wmapplrc.5
src/: Makefile.am  Makefile.in  args.c  args.h  dockapp.c  dockapp.h  dockapp.h.org  fileexists.c  fileexists.h  getopt.c  getopt1.c  interface.xpm  leftarr.xpm  options.c  options.h  pixmap.c  pixmap.h  rcparser.c  rcparser.h  rightarr.xpm  wmappl.c  xpmbutton.c  xpmbutton.h
