AC_INIT(src/wmappl.c)
AM_INIT_AUTOMAKE(wmappl,0.71)
AM_CONFIG_HEADER(config.h)

dnl Available from the GNU Autoconf Macro Archive at:
dnl http://www.gnu.org/software/ac-archive/htmldoc/adl_func_getopt_long.html
dnl
AC_DEFUN([adl_FUNC_GETOPT_LONG],
 [AC_PREREQ(2.49)dnl
  # clean out junk possibly left behind by a previous configuration
  rm -f src/getopt.h
  # Check for getopt_long support
  AC_CHECK_HEADERS([getopt.h])
  AC_CHECK_FUNCS([getopt_long],,
   [# FreeBSD has a gnugetopt library for this
    AC_CHECK_LIB([gnugetopt],[getopt_long],[AC_DEFINE([HAVE_GETOPT_LONG])],
     [# use the GNU replacement
      AC_DEFINE([HAVE_GETOPT_LONG],,[Force usage of getopt_long()])
      AC_LIBOBJ(getopt)
      AC_LIBOBJ(getopt1)
      AC_CONFIG_LINKS([src/getopt.h:src/gnugetopt.h])])])])


AC_PROG_INSTALL
AC_PROG_CC
AC_LANG_C
AC_PROG_MAKE_SET

AC_HEADER_STDC

AC_PATH_XTRA

dnl getopt_long
AC_CONFIG_LIBOBJ_DIR(src)
adl_FUNC_GETOPT_LONG
dnl
dnl  Unconditionally use "local" getopt (autoconf test only)
dnl
dnl rm -f src/getopt.h
dnl AC_DEFINE([HAVE_GETOPT_LONG],,[Force usage of getopt_long()])
dnl AC_LIBOBJ(getopt)
dnl AC_LIBOBJ(getopt1)
dnl AC_CONFIG_LINKS([src/getopt.h:src/gnugetopt.h])
dnl
dnl 
dnl  command line 
dnl
dnl AC_ARG_ENABLE(getopt_long,
dnl AC_HELP_STRING([--disable-getopt_long], [disable getopt_long usage]),
dnl [
dnl if test "$enableval" = yes; then
dnl         AC_DEFINE(HAVE_GETOPT_LONG, 1, [use getopt_long])
dnl fi
dnl ],
dnl [AC_DEFINE(HAVE_GETOPT_LONG, 1, [use getopt_long])])

dnl tooltips option
AC_ARG_ENABLE(tooltips,
AC_HELP_STRING([--disable-tooltips], [disable support for tooltips (default=yes)]),
[
if test "$enableval" = yes; then
        AC_DEFINE(USE_TOOLTIPS, 1, [use tooltips])
fi
],
[AC_DEFINE(USE_TOOLTIPS, 1, [use tooltips])])


dnl Imlib2, to allow PNG et al.
AC_MSG_CHECKING([whether to use Imlib2])
IMLIB2_FLAGS="no"
AC_ARG_ENABLE(Imlib2,
	      [  --enable-Imlib2         enable support for Imlib2 (default=no)],
              if eval "test x$enable_Imlib2 = xyes"; then
	         IMLIB2_FLAGS="yes"
              fi)
	      
if test "$IMLIB2_FLAGS" = yes; then
	AC_MSG_RESULT([yes])
        AC_DEFINE(HAVE_IMLIB2, 1, [add support for IMLIB2 icons])
	IMLIB2_LIBS="-lImlib2 -lm"
else
	AC_MSG_RESULT([no])
	IMLIB2_LIBS=""
fi


AC_CHECK_FUNCS(gettimeofday)

CFLAGS="$CFLAGS $X_CFLAGS"
LIBS="$X_PRE_LIBS $X_LIBS $IMLIB2_LIBS -lXpm -lX11 -lXext $X_EXTRA_LIBS"

AC_OUTPUT(Makefile src/Makefile man/Makefile)
